yamls/shop-app-cloud/basket-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-service-deployment
  labels:
    app: basket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basket-service
  template:
    metadata:
      labels:
        app: basket-service
    spec:
      containers:
        - name: basket-service
          image: grz3lak1997/basket-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: basket-service-service
  labels:
    app: basket-service
spec:
  selector:
    app: basket-service
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
