yamls/shop-app-cloud/front-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: grz3lak1997/front-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
