yamls/shop-app-cloud/mailing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailing-service-deployment
  labels:
    app: mailing-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mailing-service
  template:
    metadata:
      labels:
        app: mailing-service
    spec:
      containers:
        - name: mailing-service
          image: grz3lak1997/mailing-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mailing-service-service
  labels:
    app: mailing-service
spec:
  selector:
    app: mailing-service
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
